# chess-project-public-portfolio

./: README.md  googletest @ cb455a7.webloc
header/: Chess_Board.h  Chess_Board.h.webloc  File_Manager.h  Game_Manager.h  bishop.h  king.h  knight.h  pawn.h  piece.h  queen.h  rook.h
src/: CMakeLists.txt  Chess_Board.cpp
test/: test.cpp
